--- a/js-frontend/style.css
+++ b/js-frontend/style.css
@@ -1,17 +1,35 @@
+body {
+  text-align: center;
+  color: white;
+  font-family: 'Kirang Haerang', cursive;
+  background-image: url('background.jpeg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
+}
+
 .hidden {
   visibility: hidden;
   position: absolute
 }
 
+.block {
+  display: block;
+}
+
 .cards {
-  display:flex;
+  color: black;
+  font-family: 'Open Sans', sans-serif;
+  display: flex;
   align-items: center;
   justify-content: center;
-  width: 25%;
+  width: 20%;
   height: 10rem;
-  border: solid;
-  border-width: 1px;
-  margin: 1rem;
+  border-radius: 10px;
+  margin: 2rem;
+  text-align: center;
+  background-color: rgba(255,255,255,0.4);
 }
 
 .options {
@@ -23,7 +41,53 @@
 }
 
 #quiz-card-area {
+  color: black;
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
   width:100%;
+}
+
+#name-form {
+  color: black;
+  font-family: 'Kirang Haerang', cursive;
+  transform: translate(0, 50%);
+  margin: auto;
+  width: 20%;
+  height: 20%;
+  border-radius: 10px;
+  text-align: center;
+  background-color: rgba(255,255,255,0.4);
+
+}
+
+#quiz-card-form {
+  color: black;
+  font-family: 'Kirang Haerang', cursive;
+  transform: translate(0, 40%);
+  margin: auto;
+  width: 20%;
+  height: 20%;
+  border-radius: 10px;
+  text-align: center;
+  background-color: rgba(255,255,255,0.4);
+
+}
+
+#game-over {
+  color: black;
+  font-family: 'Open Sans', sans-serif;
+  transform: translate(0, 10%);
+  margin: auto;
+  width: 20%;
+  height: 20%;
+  border-radius: 10px;
+  text-align: center;
+  background-color: rgba(255,255,255,0.4);
+
+}
+
+#game-over-text {
+  font-family: 'Kirang Haerang', cursive;
 }
